--- a/offchain/package.json
+++ b/offchain/package.json
@@ -2,10 +2,12 @@
   "name": "offchain",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "module": "module",
+  "main": "built/app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc -w",
+    "start": "npx nodemon node built/app.js"
   },
   "keywords": [],
   "author": "",
