--- a/offchain/package.json
+++ b/offchain/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
