--- a/offchain/package.json
+++ b/offchain/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.2",
+    "@types/multer": "^1.4.9",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
