--- a/offchain/package.json
+++ b/offchain/package.json
@@ -19,10 +19,13 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.440.0",
     "@supabase/supabase-js": "^2.38.2",
     "@types/multer": "^1.4.9",
+    "@types/multer-s3": "^3.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1"
   }
 }
