--- a/athena/tsconfig.json
+++ b/athena/tsconfig.json
@@ -23,6 +23,6 @@
       
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "node_modules/next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
