--- a/athena/package.json
+++ b/athena/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@randlabs/myalgo-connect": "^1.4.2",
     "algosdk": "^2.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -45,6 +46,7 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "prisma": "^5.5.2",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
