--- a/athena/package.json
+++ b/athena/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@randlabs/myalgo-connect": "^1.4.2",
     "@uploadthing/react": "^5.7.0",
     "algosdk": "^2.7.0",
     "class-variance-authority": "^0.7.0",
@@ -49,6 +50,7 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "prisma": "^5.5.2",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
